--- a/principal-Administracion.html
+++ b/principal-Administracion.html
@@ -9,14 +9,13 @@
     <meta name="csrf-token" content="KrT0K4JDi7KSb2c43qIg4ffxdybnDXB6ru5JXNjT">
 	<title>Ticket-Mayordomia©</title>
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico'>
-    <link rel="stylesheet" href="/style.css">
-</head>
+    <link rel="stylesheet" href="/style.css"></head>
 <body>
 	<div class="container-fluid bg-gray-100" id="main-container">
 		<div class="flex flex-col items-center justify-center h-screen w-full bg-gray-100">
     <div class="flex flex-col md:flex-row w-full md:w-2/3 h-full md:h-auto bg-white rounded-lg md:shadow px-2 py-12 md:px-8 md:py-8">
         <div class="hidden md:flex md:flex-col justify-center w-1/3 mr-12 pl-6">
-            <img src="/ticketMayordomia.png" alt="ticketMayordomia" class="max-w-full">
+            <img src="/ticketMayordomia.png" alt="MindBox" class="max-w-full">
             <br>
             <img src="/banner.png" alt="Login" class="max-w-full">
             <br>
@@ -33,7 +32,7 @@
                 <li role="presentation"><a href="/principal-Cajeros.html">Cajeros</a></li>
                 <li role="presentation" class="active"><a href="/principal-Administracion.html">Administración</a></li>
             </ul>
-            <form action="/menuIndex/indexAdministrador.html" method="get" id="login" class="w-full md:w-2/3 p-4">
+            <form action="/login/inicio-sistema.html" method="get" id="login" class="w-full md:w-2/3 p-4">
                 <input type="hidden" name="_token" value="KrT0K4JDi7KSb2c43qIg4ffxdybnDXB6ru5JXNjT">                <div class="row">
                     <div class="col-12">
                         <div class="form-group ">
