--- a/principal-Cajeros.html
+++ b/principal-Cajeros.html
@@ -32,16 +32,16 @@
                 <li role="presentation" class="active"><a href="/principal-Cajeros.html">Cajeros</a></li>
                 <li role="presentation"><a href="/principal-Administracion.html">Administración</a></li>
             </ul>
-            <form action="/menuIndex/indexCajero.html" method="get" id="login" class="w-full md:w-2/3 p-4">
+            <form action="/login/inicio-sistema.html" method="get" id="login" class="w-full md:w-2/3 p-4">
                 <input type="hidden" name="_token" value="KrT0K4JDi7KSb2c43qIg4ffxdybnDXB6ru5JXNjT">                <div class="row">
                     <div class="col-12">
                         <div class="form-group ">
                             <label for="user" class="control-label">Usuario</label>
-                            <input type="text" name="userCajero" id="user" class="form-control" value="">
+                            <input type="text" name="user" id="user" class="form-control" value="">
                         </div>
                         <div class="form-group ">
                             <label for="password" class="control-label">Contraseña</label>
-                            <input type="password" name="passwordCajero" id="password" class="form-control">
+                            <input type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
@@ -51,7 +51,7 @@
             </form>
             <div class="inline-block">
                 <p class="flex flex-col text-center text-xs flex md:hidden">
-                        <img src="/banderinLogo.png" alt="Ticket-Mayordomia©" class="w-32 mx-auto">
+                        <img src="/banderinLogo.png" alt="MindBox" class="w-32 mx-auto">
                     </a>
                     Todos los derechos reservados © 2023.
                 </p>
