--- a/principal-Usuario.html
+++ b/principal-Usuario.html
@@ -16,7 +16,7 @@
         <div class="hidden md:flex md:flex-col justify-center w-1/3 mr-12 pl-6">
             <img src="/ticketMayordomia.png" alt="MindBox" class="max-w-full">
             <br>
-            <img src="/banner.png" alt="Login" class="max-w-full">
+            <img src="/bannerV2.png" alt="Login" class="max-w-full">
             <br>
             <p class="text-center text-xs">
                 <a target="_blank">Ticket-Mayordomia©</a><br>Todos los derechos reservados © 2023.
