--- a/menuIndex/index.html
+++ b/menuIndex/index.html
@@ -23,7 +23,7 @@
 
                 <div class="text logo-text">
                     <span class="name">USUARIO</span>
-                    <span class="profession">Mayordomía 2024</span>
+                    <span class="profession">M-2024</span>
                 </div>
             </div>
 
