--- a/menuIndex/index.html
+++ b/menuIndex/index.html
@@ -11,7 +11,7 @@
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     
-    <title>Ticket-M®</title> 
+    <title>Ticket-Mayordomía®</title> 
 </head>
 <body>
     <nav class="sidebar close">
@@ -22,7 +22,7 @@
                 </span>
 
                 <div class="text logo-text">
-                    <span class="name">USUARIO</span>
+                    <span class="name">USUARIOS</span>
                     <span class="profession">M-2024</span>
                 </div>
             </div>
@@ -100,8 +100,6 @@
     </section>
 
     <script src="script.js"></script>
-    <script src="main.js"></script>
-
 
 </body>
 </html>
