--- a/menuIndex/index.html
+++ b/menuIndex/index.html
@@ -96,7 +96,7 @@
 
     <section class="home">
         <div class="text">TM</div>
-        <div class="text"> Aqui va el contenido de cada apartado</div>
+        <div class="text"> Bienvenido a Ticket-Mayordomía® proceso 2024</div>
     </section>
 
     <script src="script.js"></script>
