--- a/principal-Usuario.html
+++ b/principal-Usuario.html
@@ -14,7 +14,7 @@
 		<div class="flex flex-col items-center justify-center h-screen w-full bg-gray-100">
     <div class="flex flex-col md:flex-row w-full md:w-2/3 h-full md:h-auto bg-white rounded-lg md:shadow px-2 py-12 md:px-8 md:py-8">
         <div class="hidden md:flex md:flex-col justify-center w-1/3 mr-12 pl-6">
-            <img src="/ticketMayordomia.png" alt="MindBox" class="max-w-full">
+            <img src="/ticketMayordomia.png" alt="Mayordomia" class="max-w-full">
             <br>
             <img src="/bannerV2.png" alt="Login" class="max-w-full">
             <br>
