update registro & principal-Usuario.html

--- a/principal-Usuario.html
+++ b/principal-Usuario.html
@@ -44,7 +44,7 @@
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
-                            <a href="/registro.html" class="btn btn-default  btn-block">Registrate</a>
+                            <a href="/loggin y registro/Registro de usuarios.html" class="btn btn-default  btn-block">Registrate</a>
                         </div>
                     </div>
                 </div>
