modified:   principal-Administracion.html

--- a/principal-Administracion.html
+++ b/principal-Administracion.html
@@ -21,7 +21,7 @@
             <br>
             <p class="text-center text-xs">
                 <a target="_blank">Ticket-Mayordomia©</a><br>Todos los derechos reservados © 2023.
-                <br>Un producto de DreamCreators</a>.
+                <br>Un producto de DreamCreatorss</a>.
             </p>
         </div>
         <div class="flex flex-col items-center w-full md:w-2/3">
