modified:   loggin y registro/Registro de usuarios.html 	modified:   loggin y registro/movimiento.js

--- a/loggin y registro/Registro de usuarios.html
+++ b/loggin y registro/Registro de usuarios.html
@@ -81,6 +81,9 @@
                     <div class="campo sigPag">
                         <button>Siguiente</button>
                     </div>
+                    <div class="campo btns">
+                        <button class="salir">Salir</button>
+                    </div>
                 </div>
     
                 <!--Segunda parte-->
