modified:   principal-Usuario.html 	new file:   restablecer.html

--- a/principal-Usuario.html
+++ b/principal-Usuario.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="text-center text-gray-700">¿Olvidaste tu contraña? <a href="/restablecer" class="text-cs-primary">aquí</a>.</p>
+                <p class="text-center text-gray-700">¿Olvidaste tu contraña? <a href="/restablecer.html" class="text-cs-primary">aquí</a>.</p>
             </form>
             <div class="inline-block">
                 <p class="flex flex-col text-center text-xs flex md:hidden">
