renamed:    menuIndex/indexAdministrador.html -> menuAdministrador/indexAdministrador.html 	renamed:    menuIndex/indexCajero.html -> menuCajero/indexCajero.html 	renamed:    menuIndex/.DS_Store -> menuUsuario/.DS_Store 	renamed:    menuIndex/.hintrc -> menuUsuario/.hintrc 	renamed:    menuIndex/index.html -> menuUsuario/index.html 	renamed:    menuIndex/logo.png -> menuUsuario/logo.png 	renamed:    menuIndex/logoTM.png -> menuUsuario/logoTM.png 	renamed:    menuIndex/main.js -> menuUsuario/main.js 	new file:   menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html 	renamed:    menuIndex/opcionsUsuario/boletos.css -> menuUsuario/opcionesUsuario/boletos/boletos.css 	renamed:    menuIndex/opcionsUsuario/boletos.js -> menuUsuario/opcionesUsuario/boletos/boletos.js 	renamed:    menuIndex/opcionsUsuario/boletosUsuario.html -> menuUsuario/opcionesUsuario/boletos/boletosUsuario.html 	renamed:    menuIndex/script.js -> menuUsuario/script.js 	renamed:    menuIndex/style.css -> menuUsuario/style.css

--- a/menuUsuario/index.html
+++ b/menuUsuario/index.html
@@ -61,7 +61,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="/menuIndex/opcionsUsuario/ajustesUsuario.html">
                             <i class='bx bx-cog icon' ></i>
                             <span class="text nav-text">Ajustes</span>
                         </a>
