--- a/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html
+++ b/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html
@@ -62,7 +62,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="/menuIndex/opcionsUsuario/ajustesUsuario.html">
                             <i class='bx bx-cog icon' ></i>
                             <span class="text nav-text">Ajustes</span>
                         </a>
