modified:   menuUsuario/index.html 	modified:   principal-Administracion.html 	modified:   principal-Cajeros.html 	modified:   principal-Usuario.html

--- a/principal-Usuario.html
+++ b/principal-Usuario.html
@@ -31,7 +31,7 @@
                 <li role="presentation"><a href="/principal-Cajeros.html">Cajeros</a></li>
                 <li role="presentation"><a href="/principal-Administracion.html">Administración</a></li>
             </ul>
-            <form action="/menuIndex/index.html" method="get" id="login" class="w-full md:w-2/3 p-4">
+            <form action="/menuUsuario/index.html" method="get" id="login" class="w-full md:w-2/3 p-4">
                 <input type="hidden" name="_token" value="KrT0K4JDi7KSb2c43qIg4ffxdybnDXB6ru5JXNjT">                <div class="row">
                     <div class="col-12">
                         <div class="form-group ">
