--- a/menuUsuario/index.html
+++ b/menuUsuario/index.html
@@ -40,7 +40,7 @@
 
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="/menuUsuario/index.html">
                             <i class='bx bx-home-alt icon' ></i>
                             <span class="text nav-text">Inicio</span>
                         </a>
@@ -54,14 +54,14 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="/menuIndex/opcionsUsuario/boletosUsuario.html">
+                        <a href="/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html">
                             <i class='bx bx-purchase-tag-alt icon'></i>
                             <span class="text nav-text">Boletos</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="/menuIndex/opcionsUsuario/ajustesUsuario.html">
+                        <a href="/menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html">
                             <i class='bx bx-cog icon' ></i>
                             <span class="text nav-text">Ajustes</span>
                         </a>
