--- a/menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html
+++ b/menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="/menuIndex/style.css">
+    <link rel="stylesheet" href="/menuUsuario/style.css">
     
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -18,7 +18,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="/menuIndex/logoTM.png" alt="">
+                    <img src="/menuUsuario/logoTM.png" alt="">
                 </span>
 
                 <div class="text logo-text">
@@ -40,7 +40,7 @@
 
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="/menuIndex/index.html">
+                        <a href="/menuUsuario/index.html">
                             <i class='bx bx-home-alt icon' ></i>
                             <span class="text nav-text">Inicio</span>
                         </a>
@@ -54,14 +54,14 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="/menuIndex/opcionsUsuario/boletosUsuario.html">
+                        <a href="/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html">
                             <i class='bx bx-purchase-tag-alt icon'></i>
                             <span class="text nav-text">Boletos</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="/menuIndex/opcionsUsuario/ajustesUsuario.html">
+                        <a href="/menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html">
                             <i class='bx bx-cog icon' ></i>
                             <span class="text nav-text">Ajustes</span>
                         </a>
@@ -99,7 +99,7 @@
         <div class="text"> Bienvenido a Ticket-Mayordomía® proceso 2024</div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="/menuUsuario/script.js"></script>
 
 </body>
 </html>
