--- a/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html
+++ b/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="/menuIndex/style.css">
+    <link rel="stylesheet" href="/menuUsuario/style.css">
     <link rel="stylesheet" href="boletos.css">
     
     <!----===== Boxicons CSS ===== -->
@@ -19,7 +19,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="/menuIndex/logoTM.png" alt="">
+                    <img src="/menuUsuario/logoTM.png" alt="">
                 </span>
 
                 <div class="text logo-text">
@@ -41,7 +41,7 @@
 
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="/menuIndex/index.html">
+                        <a href="/menuUsuario/index.html">
                             <i class='bx bx-home-alt icon' ></i>
                             <span class="text nav-text">Inicio</span>
                         </a>
@@ -55,14 +55,14 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html">
                             <i class='bx bx-purchase-tag-alt icon'></i>
                             <span class="text nav-text">Boletos</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="/menuIndex/opcionsUsuario/ajustesUsuario.html">
+                        <a href="/menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html">
                             <i class='bx bx-cog icon' ></i>
                             <span class="text nav-text">Ajustes</span>
                         </a>
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <script src="/menuIndex/script.js"></script>
+    <script src="/menuUsuario/script.js"></script>
     <script src="boletos.js"></script>
 </body>
 </html>
