modified:   menuAdministrador/indexAdministrador.html 	modified:   menuCajero/indexCajero.html 	modified:   principal-Administracion.html 	modified:   principal-Cajeros.html

--- a/menuAdministrador/indexAdministrador.html
+++ b/menuAdministrador/indexAdministrador.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/menuUsuario/style.css">
     
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -18,7 +18,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="logoTM.png" alt="">
+                    <img src="/menuUsuario/logoTM.png" alt="">
                 </span>
 
                 <div class="text logo-text">
@@ -113,7 +113,7 @@
         <div class="text"> Aqui va el contenido de cada apartado</div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="/menuUsuario/script.js"></script>
 
 </body>
 </html>
