modified:   menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html

--- a/menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html
+++ b/menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html
@@ -96,7 +96,7 @@
 
     <section class="home">
         <div class="text">TM</div>
-        <div class="text"> Bienvenido a Ticket-Mayordomía® proceso 2024</div>
+        <div class="text"> Ajustes de Usuario</div>
     </section>
 
     <script src="/menuUsuario/script.js"></script>
