--- a/menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html
+++ b/menuUsuario/opcionesUsuario/ajustes/ajustesUsuario.html
@@ -47,7 +47,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="/menuUsuario/opcionesUsuario/datos/datosUsuario.html"></a>
                             <i class='bx bx-data icon'></i>
                             <span class="text nav-text">Mis datos</span>
                         </a>
