--- a/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html
+++ b/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="/menuUsuario/opcionesUsuario/datos/datosUsuario.html">
                             <i class='bx bx-data icon'></i>
                             <span class="text nav-text">Mis datos</span>
                         </a>
