modified:   menuUsuario/opcionesUsuario/boletos/boletosPago.html 	modified:   menuUsuario/opcionesUsuario/boletos/boletosRegistro.html

--- a/menuUsuario/opcionesUsuario/boletos/boletosRegistro.html
+++ b/menuUsuario/opcionesUsuario/boletos/boletosRegistro.html
@@ -189,6 +189,10 @@
             <button class="button" onclick="window.location.href='/menuUsuario/opcionesUsuario/boletos/boletosPago.html'">Comprar Boleto</button>
           </div>
 
+          <div class="button-container">
+            <button class="button" onclick="window.location.href='/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html'">Cancelar</button>
+          </div>
+
     </section>
 
     
