--- a/menuUsuario/opcionesUsuario/boletos/boletosPago.html
+++ b/menuUsuario/opcionesUsuario/boletos/boletosPago.html
@@ -117,7 +117,7 @@
                 <h2 class="section-title">Opciones de pago</h2>
                 <div class="form-row">
                     <div class="form-group">
-                        <button class="button">Pago en el banco</button>
+                        <button class="button" onclick="window.location.href='/menuUsuario/opcionesUsuario/boletos/formaspago/pago.html'">Pago en el banco</button>
                     </div>
                     <div class="form-group">
                         <button class="button">Pago en catedral</button>
