--- a/menuUsuario/opcionesUsuario/boletos/boletosPanel.html
+++ b/menuUsuario/opcionesUsuario/boletos/boletosPanel.html
@@ -96,7 +96,7 @@
     </nav>
 
     <section class="home">
-        <div class="text"> Formas de pago</div>
+        <div class="text"> Mis boletos</div>
 
         <div class="section">
             <h2 class="section-title">Datos del Boleto</h2>
@@ -114,18 +114,25 @@
                 <label for="nombre_boleto">Nombre del Boleto:</label>
                 <input type="text" id="nombre_boleto" name="nombre_boleto" required>
               </div>
-                <h2 class="section-title">Opciones de pago</h2>
+                <h2 class="section-title">Datos Domiciliarios</h2>
+                
                 <div class="form-row">
                     <div class="form-group">
-                        <button class="button">Pago en el banco</button>
+                        <label for="ciudad">Ciudad:</label>
+                        <input type="text" id="ciudad" name="ciudad" required>
                     </div>
                     <div class="form-group">
-                        <button class="button">Pago en catedral</button>
-                    </div>  
+                        <label for="calle">Calle:</label>
+                        <input type="text" id="calle" name="calle" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="numero">Número:</label>
+                        <input type="text" id="numero" name="numero" required>
+                    </div>
                 </div>
             
                 <div class="button-container">
-                    <button class="button" onclick="window.location.href='/menuUsuario/opcionesUsuario/boletos/boletosPanel.html'">Mis Boletos</button>
+                    <button class="button" onclick="window.location.href='/menuUsuario/opcionesUsuario/boletos/boletosUsuario.html'">Boletos</button>
                   </div>
           </div>
     </section>
