--- a/menuAdministrador/indexAdministrador.html
+++ b/menuAdministrador/indexAdministrador.html
@@ -47,35 +47,35 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="datos/misDatos.html">
                             <i class='bx bx-data icon'></i>
                             <span class="text nav-text">Mis datos</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="usuarios/moduloUsers.html">
                             <i class='bx bx-user icon'></i>
                             <span class="text nav-text">Usuarios</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="boletos/moduloBoletos.html">
                             <i class='bx bx-purchase-tag-alt icon'></i>
                             <span class="text nav-text">Boletos</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="estadisticas/estadisticas.html">
                             <i class='bx bx-bar-chart-square icon'></i>
                             <span class="text nav-text">Estadisticas</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="ajustes/moduloAjustes.html">
                             <i class='bx bx-cog icon' ></i>
                             <span class="text nav-text">Ajustes</span>
                         </a>
